objects/Annual_Financial__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Base__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP 
Description: Base rent amount for the given year</description>
        <inlineHelpText>Base rent amount from ABC, no tax, no fees</inlineHelpText>
        <label>Annual Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Fees__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP 
Description: Annual Fee applicable for the given year</description>
        <inlineHelpText>Annual Fee applicable for the year</inlineHelpText>
        <label>Annual Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Sales_Tax__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP 
Description: Annual Sales Tax applicable for the given year</description>
        <inlineHelpText>Annual Sales Tax</inlineHelpText>
        <label>Annual Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Termination_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP 
Description: Termination Amount applicable for the given year</description>
        <inlineHelpText>Termination Amount applicable for the year</inlineHelpText>
        <label>Annual Termination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Total__c</fullName>
        <description>Project: GPP 
Description: Total applicable amount for the year</description>
        <formula>Annual_Base__c +  Annual_Sales_Tax__c +  Annual_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total applicable amount (Annual Base Fee + Annual Sales Tax + Annual Fee) for the year</inlineHelpText>
        <label>Annual Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Of_Lease_Per_KWH__c</fullName>
        <label>Cost Of Lease Per KWH</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Energy_Price_per_KWH__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Guaranteed Energy Price per KWH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Base_Plus_Tax__c</fullName>
        <description>Project: GPP 
Description: Base amount including tax for a month for the given year</description>
        <inlineHelpText>Base amount including tax for a month for the given year</inlineHelpText>
        <label>Monthly Base Plus Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Base__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP 
Description: Base rent amount for a month in the given year</description>
        <inlineHelpText>Base rent amount from ABC for a month, no tax, no fees</inlineHelpText>
        <label>Monthly Base</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Fees__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP 
Description: Monthly Fee applicable per month for the given year</description>
        <inlineHelpText>Monthly Fee applicable per month for the year</inlineHelpText>
        <label>Monthly Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Sales_Tax__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP 
Description: Monthly Sales Tax applicable for the given year</description>
        <inlineHelpText>Monthly Sales Tax applicable per month for the given year</inlineHelpText>
        <label>Monthly Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Total__c</fullName>
        <description>Project: GPP 
Description: Monthly Total applicable amount for the given year</description>
        <formula>Monthly_Base__c +  Monthly_Fees__c +  Monthly_Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly total applicable amount (Monthly Base Fee + Monthly Sales Tax + Monthly Fee) for the given year</inlineHelpText>
        <label>Monthly Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Savings_NPV_3__c</fullName>
        <label>Net Savings NPV 3%</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Savings_NPV_5__c</fullName>
        <label>Net Savings NPV 5%</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Savings_NPV_8__c</fullName>
        <label>Net Savings NPV 8%</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPA_Payment__c</fullName>
        <label>PPA Payment</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>Project: GPP 
Description: To link the Annual Financials value to the locked quote</description>
        <inlineHelpText>Related Quote</inlineHelpText>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Annual Financials</relationshipLabel>
        <relationshipName>Annual_Financials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remaining_Lease_Value__c</fullName>
        <label>Remaining Lease Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Line_Type__c</fullName>
        <label>Response Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>PPA Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA Revenue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <description>Project: GPP 
Description: A numeric value to store the Year, for which the Annual Financial record is applicable to.</description>
        <inlineHelpText>Year for which the Annual Financial record is applicable.</inlineHelpText>
        <label>Row Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Bill_Savings__c</fullName>
        <label>Utility Bill Savings</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Annual Financial</label>
    <nameField>
        <displayFormat>AF-{00000000}</displayFormat>
        <label>Annual Financial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Financials</pluralLabel>
    <recordTypes>
        <fullName>Commercial</fullName>
        <active>true</active>
        <label>Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential</fullName>
        <active>true</active>
        <label>Residential</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>